# rust-json-api

json-api-rs/: Cargo.toml
json-api-rs/src/: database.rs  database2.rs  database_design.md  macros.rs  main.nickel-nope.rs  main.rs  main.rs.nope  patch_helpers.rs  patch_log.rs  server.rs  shared_value.rs
json_patch/: Cargo.toml
json_patch/src/: hrm.rs  lib.rs  lib.rs.bak  parse.rs  patch.rs
json_patch_db/: Cargo.toml  design.md
json_patch_db/src/: lib.rs
